--- a/app/views/payments/success.html.erb
+++ b/app/views/payments/success.html.erb
@@ -1,3 +1,6 @@
-Congratulations on your new pair of shoes!
-
-<%= link_to "Go and buy more shoes", listings_path%>
+<div class="container success-margin">
+    <h1 class="success-heading d-flex justify-content-center align-self-center text-center">Congratulations on your new pair of shoes!</h1>
+    <div class="d-flex justify-content-center">
+        <%= link_to "Go and buy more shoes", listings_path, class: "ctrl-standard fx-sliderIn btn-style btn-lg"%>
+    </div>
+</div>
