--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -8,20 +8,19 @@
             <p class="card-text">Size: <%= @listing.size %> (US mens)</p>
             <p class="card-text">Price: A$<%= @listing.price %></p>
             <p class="card-text">Description: <%= @listing.description %></p>
-            <p class="card-text"><small class="text-muted">Listed by <%= @listing.user.username %> on <%= @listing.created_at.strftime("%d/%m/%Y") %></small>
-              <% if user_signed_in? && @listing.user.id != current_user.id %>
-                <%= link_to "Message #{@listing.user.username}", conversations_path(sender_id: current_user.id, recipient_id: @listing.user.id), method: "post" %>
-              <% end %>
-            </p>
+            <p class="card-text"><small class="text-muted">Listed by <%= @listing.user.username %> on <%= @listing.created_at.strftime("%d/%m/%Y") %></small></p>
+            <%if user_signed_in? && @listing.user.id != current_user.id %>
+              <%= link_to "Message #{@listing.user.username}", conversations_path(sender_id: current_user.id, recipient_id: @listing.user.id), method: "post", class: "ctrl-standard fx-sliderIn msg-btn btn-lg"%>
+            <% end %>
         </div>
     </div>
 </div>
     <div>
       <% if @payment_button %>
         <div>
-          <button data-stripe="payment">
-            <h4>Buy now</h4>
-          </button>
+          <div class="btn" role="button" aria-pressed="true" data-stripe="payment">
+            <h4 class="ctrl-standard fx-sliderIn btn-style btn-lg">Buy now</h4>
+        </div>
         <% end %>
         <script src="https://js.stripe.com/v3/"></script>
         <script>
@@ -38,4 +37,3 @@
             });
         </script>
       </div>
-<%= link_to 'Back', 'javascript:history.back()' %>
