--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,6 +95,15 @@
   font-size: 100px;
 }
 
+.sold-text {
+  @include staatliches;
+  font-size: 50px;
+  position: absolute;
+  margin-left: 10%;
+  margin-top: 10%;
+  text-decoration: underline;
+}
+
 .mx-auto {
     @include staatliches;
 }
@@ -329,6 +338,24 @@ h3 {
 
 .success-margin {
   margin-top: 10%;
+}
+
+.show-margin {
+  margin-top: 10%;
+  margin-left: 8%;
+}
+
+.img-show {
+  width: 100%;
+  height: 100%;
+}
+
+.show-title {
+  font-size: 50px;
+}
+
+.show-text {
+  font-size: 30px;
 }
 
 @media only screen and (max-width: 768px) {
