--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
   </div>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+    <nav class="navbar navbar-expand-md navbar-dark sticky-top">
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <%= link_to "All Shoes", listings_path, class: "nav-link" %>
@@ -29,13 +29,13 @@
             </li>
         </ul>
     </div>
-    <div class="mx-auto order-0">
+    <div class="mx-auto order-2">
         <a class="navbar-brand mx-auto" href="<%= listings_path %>">K I C K S W A P</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
-    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse">
       <% if user_signed_in? %>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
