add search bar in nav and styled

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,6 +111,10 @@
     color: #fff !important;
 }
 
+.form-control {
+  color: #fff !important;
+}
+
 .nav-link {
   margin-top: 1%;
   margin-bottom: 1%;
