--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -72,6 +72,7 @@
             <% end %>
         </div>
         </div>
-      <% end %>
+      <% end %> 
     <% end %>
 </div>
+<%= will_paginate @listings %>
