--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,16 +6,15 @@
       <% user = User.find(message.user_id) %>
       <% if user == @them %>
         <div class="d-flex justify-content-end">
-          <p class="text-right bg-secondary p-3 rounded text-white">
+          <p class="text-right bg-secondary p-3 rounded">
             <strong><%= user.username %></strong><br>
             <%= message.body %><br>
             <span class="font-italic"><%= time_ago_in_words(message.updated_at, {}) %> ago</span>
             </p>
-          <%= show_chat_avatar(@them) %>
-        <%# </div> %>
+        </div>
       <% else %>
         <div class="d-flex justify-content-start">
-          <p class="bg-info p-3 rounded text-white">
+          <p class="bg-info p-3 rounded">
             <strong><%= user.username %></strong><br>
             <%= message.body %><br>
             <span class="font-italic"><%= time_ago_in_words(message.updated_at, {}) %> ago</span>
@@ -28,7 +27,7 @@
 </div>
   <%= form_for [@conversation, @message], html: {class: "input-group"} do |f| %>
     <div class="container">
-        <%= f.text_area :body, class: "form-control" %>
+        <%= f.text_area :body, class: "" %>
         <%= f.text_field :user_id, value: current_user.id, type: "hidden" %>
         <div>
           <%= f.submit "submit", class: "btn btn-success" %>
