add footer start conv styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,4 +60,9 @@
 </nav>
     <%= yield %>
   </body>
+<footer class="page-footer font-small pt-4">
+  <div class="footer-copyright text-center py-3">
+    © 2020 Copyright: Finlay George
+  </div>
+</footer>
 </html>
