--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -371,6 +371,10 @@ h3 {
   font-size: 30px;
 }
 
+.footer-copyright {
+  @include lato;
+}
+
 @media only screen and (max-width: 768px) {
   .carousel-caption {
     font-size: 16px;
