--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,15 +1,15 @@
 
-<div class="container d-flex justify-content-center">
+<div class="container">
   <div class="messages-container overflow-auto">
     <% @messages.each do |message| %>
       <% if message.body %>
         <% user = User.find(message.user_id) %>
-        <% if user == @them %>
+        <% if user == @conversation.recipient %>
           <div class="d-flex justify-content-end">
             <p class="text-right bg-secondary p-3 rounded">
               <strong><%= user.username %></strong><br>
               <%= message.body %><br>
-              <span class="font-italic"><%= time_ago_in_words(message.updated_at, {}) %> ago</span>
+              <span><%= time_ago_in_words(message.updated_at) %> ago</span>
               </p>
           </div>
         <% else %>
@@ -17,7 +17,7 @@
             <p class="bg-info p-3 rounded">
               <strong><%= user.username %></strong><br>
               <%= message.body %><br>
-             <span class="font-italic"><%= time_ago_in_words(message.updated_at, {}) %> ago</span>
+             <span class="font-italic"><%= time_ago_in_words(message.updated_at) %> ago</span>
             </p>
           <% end %>
        </div>
@@ -36,7 +36,3 @@
     </div>
   </div>
 </div>
-
-<script>
-$( "div.messages-container" ).scrollTop( 1000 );
-</script>
