small fixes, doing msg styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,6 +128,10 @@
     @include lato
 }
 
+.msg-bubble {
+  background: black;
+  color: #fff;
+}
 /*------------------------------
 	Account buttons
 ------------------------------*/
