--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
               <%= link_to "My Account", account_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= get_message_alerts(current_user) %>
+              <%= message_alert(current_user) %>
             </li>
             <li class="nav-item">
               <%= link_to "Logout", destroy_user_session_path, class: "nav-link",method: :delete %>
