--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,12 +1,14 @@
-
+<div class="container-fluid">
+  <h1 class="">Messages between you and <%= @conversation.recipient %></h5>
+</div>
 <div class="container">
-  <div class="messages-container overflow-auto">
+  <div>
     <% @messages.each do |message| %>
       <% if message.body %>
         <% user = User.find(message.user_id) %>
         <% if user == @conversation.recipient %>
           <div class="d-flex justify-content-end">
-            <p class="text-right bg-secondary p-3 rounded">
+            <p class="msg-bubble text-right p-3 rounded">
               <strong><%= user.username %></strong><br>
               <%= message.body %><br>
               <span><%= time_ago_in_words(message.updated_at) %> ago</span>
@@ -14,7 +16,7 @@
           </div>
         <% else %>
           <div class="d-flex justify-content-start">
-            <p class="bg-info p-3 rounded">
+            <p class="msg-bubble p-3 rounded">
               <strong><%= user.username %></strong><br>
               <%= message.body %><br>
              <span class="font-italic"><%= time_ago_in_words(message.updated_at) %> ago</span>
