--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h1 class="">Messages between you and <%= @conversation.recipient %></h5>
+  <h2 class="sub-heading d-flex justify-content-center mt-5">Messages between you and <%= @msg_not.username %></h2>
 </div>
 <div class="container">
   <div>
