--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,23 +11,23 @@
           <%= f.email_field :email, autofocus: true, required: true, class: "form-control" %>
         </div>
         <div class="form-group">
-          <%= f.label :username %>
-          <%= f.text_field :username, autofocus: true, required: true, class: "form-control" %>
+          <%= f.label :username %><em>(Leave blank if you don't want to change it)</em>
+          <%= f.text_field :username, autofocus: true, class: "form-control" %>
         </div>
         <div class="form-group">
           <%= f.label :password %><em>(Leave blank if you don't want to change it)</em>
-          <%= f.password_field :password, autofocus: true, required: true, class: "form-control" %>
+          <%= f.password_field :password, autofocus: true, class: "form-control" %>
             <% if @minimum_password_length %>
               <em>(<%= @minimum_password_length %> characters minimum)</em>
             <% end %>
         </div>
         <div class="form-group">
           <%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation, autofocus: true, required: true, class: "form-control" %>
+          <%= f.password_field :password_confirmation, autofocus: true, class: "form-control" %>
         </div>
         <div class="form-group">
           <%= f.label :current_password %><em>We need your current password to confirm your changes</em>
-          <%= f.password_field :current_password, autofocus: true, required: true, class: "form-control" %>
+          <%= f.password_field :curren_password, autofocus: true, required: true, class: "form-control" %>
         </div>
         <%= f.submit "Update", class: "ctrl-standard fx-sliderIn btn-style btn-lg" %>
         <%= link_to "Cancel My Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "ctrl-standard fx-sliderIn btn-style btn-lg" %>
